<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/login"
            android:textSize="28sp"
            android:textColor="#5A5A5A"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/login_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="40dp"
            android:text="@string/login_btn_txt"
            android:textSize="18sp"
            android:fontFamily="@font/rubik_medium"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:background="#358263"/>

        <TextView
            android:id="@+id/signup_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:fontFamily="@font/rubik_light"
            android:text="@string/or_sign_up"
            android:textColor="#000000"
            android:textSize="20sp"
            android:focusable="true" />

    </LinearLayout>
</FrameLayout>